--- a/Run_Experiment_Unsupervised.ipynb
+++ b/Run_Experiment_Unsupervised.ipynb
@@ -6,7 +6,19 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'keep_prob'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a661aa03718a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mlatent_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0msess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_session\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"2\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVDSH\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_feas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'keep_prob'"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -32,7 +44,7 @@
    "outputs": [],
    "source": [
     "# create an optimizer\n",
-    "learning_rate=0.00\n",
+    "learning_rate=0.001\n",
     "decay_rate = 0.96\n",
     "#decay_step = 10000\n",
     "step = tf.Variable(0, trainable=False)  \n",
@@ -55,17 +67,9 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch:1/15 3100/11016: Loss:863.124 AvgLoss:567.442"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "total_epoch = 15\n",
+    "total_epoch = 25\n",
     "kl_weight = 0.\n",
     "kl_inc = 1 / 5000. # set the annealing rate for KL loss\n",
     "\n",
@@ -80,7 +84,8 @@
     "        opt, loss = model.sess.run((my_optimizer, model.cost), \n",
     "                                    feed_dict={model.input_bow: doc.reshape((-1, data.n_feas)),\n",
     "                                               model.input_bow_idx: word_indice,\n",
-    "                                               model.kl_weight: kl_weight})\n",
+    "                                               model.kl_weight: kl_weight,\n",
+    "                                               model.keep_prob: 0.9})\n",
     "        \n",
     "        kl_weight = min(kl_weight + kl_inc, 1.0)\n",
     "        epoch_loss.append(loss)\n",
