update experimental code

--- a/Run_Experiment_Supervised.ipynb
+++ b/Run_Experiment_Supervised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
     "\n",
     "latent_dim = 32\n",
     "sess = get_session(\"1\", 0.10)\n",
-    "model = VDSH_S(sess, latent_dim, data.n_feas, data.n_tags, use_cross_entropy=True)"
+    "model = VDSH_S(sess, latent_dim, data.n_feas, data.n_tags, use_cross_entropy=False)"
    ]
   },
   {
@@ -54,11 +54,23 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:1/25 2450/11016: Loss:1086.593 AvgLoss:839.302"
+     ]
+    }
+   ],
    "source": [
     "total_epoch = 25\n",
     "kl_weight = 0.\n",
     "kl_inc = 1 / 5000. # set the annealing rate for KL loss\n",
+    "\n",
+    "pred_weight = 0.\n",
+    "pred_inc = 0.1\n",
+    "max_pred_weight = 150.\n",
     "\n",
     "for epoch in xrange(total_epoch):\n",
     "    epoch_loss = []\n",
@@ -74,14 +86,17 @@
     "                                               model.input_bow_idx: word_indice,\n",
     "                                               model.labels: labels.reshape((-1, data.n_tags)),\n",
     "                                               model.kl_weight: kl_weight,\n",
+    "                                               model.tag_weight: pred_weight,\n",
     "                                               model.keep_prob: 0.9})\n",
     "        \n",
     "        kl_weight = min(kl_weight + kl_inc, 1.0)\n",
-    "        epoch_loss.append(loss)\n",
+    "        pred_weight = min(pred_weight + pred_inc, max_pred_weight)\n",
+    "\n",
+    "        epoch_loss.append(loss[0])\n",
     "        \n",
     "        if i % 50 == 0:\n",
-    "            print(\"\\rEpoch:{}/{} {}/{}: Loss:{:.3f}\".format(epoch+1, total_epoch, i, data.n_trains), end='')\n",
-    "        #   print(\"\\rEpoch:{}/{} {}/{}: Loss:{:.3f} AvgLoss:{:.3f}\".format(epoch+1, total_epoch, i, data.n_trains, loss, np.mean(epoch_loss)), end='')"
+    "            print(\"\\rEpoch:{}/{} {}/{}: Loss:{:.3f} AvgLoss:{:.3f}\".format(epoch+1, total_epoch, i, \n",
+    "                                                                           data.n_trains, loss[0], np.mean(epoch_loss)), end='')"
    ]
   },
   {
@@ -103,7 +118,7 @@
     "\n",
     "TopK=100\n",
     "print('Retrieve Top{} candidates using hamming distance'.format(TopK))\n",
-    "run_topK_retrieval_experiment(cbTrain, cbTest, data.gnd_train, data.gnd_test, TopK)"
+    "results = run_topK_retrieval_experiment(cbTrain, cbTest, data.gnd_train, data.gnd_test, TopK)"
    ]
   }
  ],
